--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Kasir
+application.vendor=ashary
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,12 +33,28 @@ dist.jar=${dist.dir}/Kasir.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Kasir
+endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.9.0.jar=src/lib/commons-beanutils-1.9.0.jar
+file.reference.commons-collections-3.2.1.jar=src/lib/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=src/lib/commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1.jar=src/lib/commons-logging-1.1.1.jar
+file.reference.groovy-all-2.0.1.jar=src/lib/groovy-all-2.0.1.jar
+file.reference.itextpdf-5.5.0.jar=src/lib/itextpdf-5.5.0.jar
+file.reference.jasperreports-6.0.0.jar=src/lib/jasperreports-6.0.0.jar
+file.reference.mariadb-java-client-2.3.0.jar=src/lib/mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MariaDB_Connector.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-beanutils-1.9.0.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.itextpdf-5.5.0.jar}:\
+    ${file.reference.mariadb-java-client-2.3.0.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -46,8 +63,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=10
-javac.target=10
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
